+ Java 8 source/target compatibility

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ android {
     lintOptions {
         warning 'MissingTranslation','GetLocales','VectorDrawableCompat'
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
