--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion '29.0.2'
 
     def getCurrentFlavor = { ->
@@ -27,7 +27,7 @@ android {
     defaultConfig {
         applicationId "com.github.yeriomin.yalpstore"
         minSdkVersion 5
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 45
         versionName getVersionName()
         vectorDrawables.useSupportLibrary = true
@@ -69,8 +69,8 @@ android {
 }
 
 dependencies {
-    contemporaryImplementation 'com.android.support:design:28.0.0'
-    contemporaryImplementation 'com.android.support:appcompat-v7:28.0.0'
+    contemporaryImplementation 'com.google.android.material:material:1.0.0'
+    contemporaryImplementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'info.guardianproject.netcipher:netcipher:2.0.0-beta1'
     implementation 'commons-net:commons-net:3.5'
     implementation 'com.nothome:javaxdelta:2.0.1'
